Changed some words lol

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@ http://www.tooplate.com/view/2084-zipper
                                 <a class="nav-link current" href="#home">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
+                                <a class="nav-link" href="#about">About Me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#services">Services</a>
+                                <a class="nav-link" href="#services">Hobbies&nbsp;</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#testimonials">Testimonials</a>
+                                <a class="nav-link" href="#testimonials">Class Work&nbsp;</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
+                                <a class="nav-link" href="#contact">Meow&nbsp;</a>
                             </li>
                         </ul>
                     </div>
@@ -62,8 +62,8 @@ http://www.tooplate.com/view/2084-zipper
                 <div class="tm-hero">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="text-uppercase tm-hero-title">Zipper</h1>
-                            <p class="tm-hero-subtitle">best destination to explore...</p>
+                            <h1 class="text-uppercase tm-hero-title">Jaden!&nbsp;</h1>
+                            <p class="tm-hero-subtitle">The best man fr ;)&nbsp;&nbsp;</p>
                         </div>
                     </div>
                 </div>                
@@ -76,8 +76,8 @@ http://www.tooplate.com/view/2084-zipper
                 <div class="tm-page-content-width">
                     <div class="tm-bg-black-translucent tm-content-box tm-content-box-right tm-flex-center">
                         <div class="tm-content-box-inner">
-                            <h2 class="tm-section-title">Mauris quis odio id sapien</h2>
-                            <p>Aliquam sollicitudin mi sollicitudin justo viverra, nec posuere lorem fringilla. Morbi quam arcu, dignissim ac rutrum vel, hendrerit feugiat tortor. Ut vulputate eros non ante lobortis viverra.</p>
+                            <h2 class="tm-section-title">About me! :)&nbsp; &nbsp;&nbsp;</h2>
+                            <p>My name is Jaden&nbsp;&nbsp;</p>
                             <p>Vestibulum ut est lorem. Sed nec blandit lorem, eget iaculis quam. Mauris quis odio id sapien scelerisque mollis. Maecenas aliquet luctus erat sit amet aliquet. Vestibulum mattis porta tristique. Vivamus suscipit bibendum lorem, at efficitur enim hendrerit nec.</p>   
                         </div>                        
                     </div>                    
